--- a/index.html
+++ b/index.html
@@ -1,12 +1,211 @@
-<head></head>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Législatives 2024</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            margin: 20px;
+            background-color: #f0f0f0;
+            color: #333;
+        }
+        h1 {
+            text-align: center;
+            color: #007BFF;
+        }
+        h2, h3 {
+            color: #007BFF;
+        }
+        label {
+            display: block;
+            margin-top: 10px;
+        }
+        select, button, textarea {
+            margin-top: 5px;
+            padding: 10px;
+            width: 100%;
+            box-sizing: border-box;
+        }
+        button {
+            background-color: #007BFF;
+            color: #fff;
+            border: none;
+            cursor: pointer;
+        }
+        button:hover {
+            background-color: #0056b3;
+        }
+        .container {
+            display: flex;
+            flex-wrap: wrap;
+            margin-top: 20px;
+        }
+        .left, .right {
+            width: 100%;
+            padding: 10px;
+        }
+        .left {
+            background-color: #fff;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        .right {
+            margin-top: 20px;
+        }
+        @media (min-width: 768px) {
+            .left, .right {
+                width: 48%;
+                margin: 1%;
+            }
+            .container {
+                flex-wrap: nowrap;
+            }
+            .right {
+                margin-top: 0;
+            }
+        }
+        iframe {
+            width: 100%;
+            height: 600px;
+            border: none;
+        }
+    </style>
+</head>
 <body>
-<h1>Législatives 2024</h1>
-<h2>Candidats 2024</h2>
-<h3>Candidats source ministère de l'Intérieur</h3>
-<p>Lien</p>
+    <h1>Législatives 2024 - candidatures</h1>
+    <p>Traitement des données et infographies réalisés par Matti FAYE</p>
+    <div class="container">
+        <div class="left">
+            <form id="urlForm">
+                <h2>Choisir son découpage</h2>
+                <label for="zoneType">Type de zone :</label>
+                <select id="zoneType" name="zoneType" onchange="updateZoneSelect()">
+                    <option value="reg">Région</option>
+                    <option value="dep">Département</option>
+                    <option value="cir">Circonscription</option>
+                </select>
+                
+                <label for="zoneSelect">Sélectionnez la zone :</label>
+                <select id="zoneSelect" name="zoneSelect" onchange="generateUrls()">
+                    <!-- Les options seront ajoutées par JavaScript -->
+                </select>
 
-<h3>Candidats source saisie manuelle</h3>
-<p>Lien</p>
-<h2>Infographies liées aux résultats</h2>
-<p>À venir</p>
+                <label for="source">Source :</label>
+                <select id="source" name="source" onchange="generateUrls()">
+                    <option value="saisie">Saisie manuelle</option>
+                    <option value="interieur">Ministère de l'Intérieur</option>
+                </select>
+
+                <p id="remarque"></p>
+
+                <label for="tour">Tour de scrutin :</label>
+                <select id="tour" name="tour" onchange="generateUrls()">
+                    <option value="1">Premier tour</option>
+                    <option value="2">Second tour</option>
+                </select>
+            </form>
+            <h2>Résultats</h2>
+            <h3>Infographie Flourish</h3>
+            <textarea id="urlTextArea" rows="4" readonly></textarea>
+            <button onclick="copyUrl()">Copier le code embed Flourish</button>
+            <h3>Liste à puces</h3>
+            <p>À copier-coller dans le corps de texte d'un article PIC</p>
+            <button id="puces" onclick="openInNewWindow()">Ouvrir dans une nouvelle fenêtre</button>
+        </div>
+        <div class="right">
+            <h2>Aperçu :</h2>
+            <iframe id="previewFrame"></iframe>
+        </div>
+    </div>
+
+    <script>
+        const zones = {
+            dep: [],
+            reg: [],
+            cir: []
+        };
+
+        async function loadZones() {
+            try {
+                const [depResponse, regResponse, cirResponse] = await Promise.all([
+                    fetch('departements.json'),
+                    fetch('regions.json'),
+                    fetch('circonscriptions.json')
+                ]);
+
+                zones.dep = await depResponse.json();
+                zones.reg = await regResponse.json();
+                zones.cir = await cirResponse.json();
+
+                updateZoneSelect();
+            } catch (error) {
+                console.error('Erreur lors du chargement des fichiers JSON', error);
+            }
+        }
+
+        function updateZoneSelect() {
+            const zoneType = document.getElementById('zoneType').value;
+            const zoneSelect = document.getElementById('zoneSelect');
+            zoneSelect.innerHTML = ''; // Clear existing options
+
+            zones[zoneType].forEach(zone => {
+                const option = document.createElement('option');
+                option.value = zone.value;
+                option.textContent = zone.name;
+                zoneSelect.appendChild(option);
+            });
+
+            generateUrls(); // Generate URLs whenever zone type is updated
+        }
+
+        function generateUrls() {
+            const zoneType = document.getElementById('zoneType').value;
+            const source = document.getElementById('source').value;
+            const zone = document.getElementById('zoneSelect').value;
+            const tour = document.getElementById('tour').value;
+            const annee = 2024;
+
+
+
+            let baseUrl;
+
+            if (source === 'saisie') {
+                baseUrl = 'https://flo.uri.sh/visualisation/18399352/embed?';
+            } else {
+                baseUrl = 'https://flo.uri.sh/visualisation/18398558/embed?';
+                document.getElementById('remarque').innerText = "Remarque : les données des candidats du ministère de l'Intérieur ne sont pas encore disponibles à l'heure disponible. Il est donc normal qu'un message d'erreur s'affiche si vous choisissez cette source."
+            }
+
+            const params = `tour=${tour}&source=${source}&zone=${zone}&annee=${annee}`;
+
+            const url = baseUrl + params;
+            const urlTextArea = document.getElementById('urlTextArea');
+            urlTextArea.value = `<iframe src='${url}' title='Interactive or visual content' class='flourish-embed-iframe' frameborder='0' scrolling='no' style='width:100%;height:600px;' sandbox='allow-same-origin allow-forms allow-scripts allow-downloads allow-popups allow-popups-to-escape-sandbox allow-top-navigation-by-user-activation'></iframe>`;
+
+            const previewFrame = document.getElementById('previewFrame');
+            previewFrame.src = url;
+        }
+
+        function copyUrl() {
+            const urlTextArea = document.getElementById('urlTextArea');
+            urlTextArea.select();
+            document.execCommand('copy');
+        }
+
+        function openInNewWindow() {
+            const zoneType = document.getElementById('zoneType').value;
+            const source = document.getElementById('source').value;
+            const zone = document.getElementById('zoneSelect').value;
+            const tour = document.getElementById('tour').value;
+            const annee = 2024;
+            const params = `tour=${tour}&source=${source}&zone=${zone}&annee=${annee}`;
+            window.open(`puces.html?${params}`, '_blank');
+        }
+
+        // Load zones from JSON files when the page loads
+        window.onload = loadZones;
+    </script>
 </body>
+</html>
