--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Législatives 2024</title>
     <style>
+.controls {
+  display: flex;
+}
+
+.radio {
+  flex: 1 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
         body {
             font-family: 'Arial', sans-serif;
             margin: 20px;
@@ -80,12 +90,15 @@
         <div class="left">
             <form id="urlForm">
                 <h2>Choisir son découpage</h2>
-                <label for="zoneType">Type de zone :</label>
-                <select id="zoneType" name="zoneType" onchange="updateZoneSelect()">
-                    <option value="reg">Région</option>
-                    <option value="dep">Département</option>
-                    <option value="cir">Circonscription</option>
-                </select>
+                <p>Choisir le type de zone :</p>
+                <div class="controls">
+                <input type="radio" id="reg" name="zoneType" value="reg" onchange="updateZoneSelect()" checked>
+                <label class="radio" for="reg">Région</label>
+                <input type="radio" id="dep" name="zoneType" value="dep" onchange="updateZoneSelect()">
+                <label class="radio" for="dep">Département</label>
+                <input type="radio" id="cir" name="zoneType" value="cir" onchange="updateZoneSelect()">
+                <label class="radio" for="cir">Circonscription</label>
+            </div>
                 
                 <label for="zoneSelect">Sélectionnez la zone :</label>
                 <select id="zoneSelect" name="zoneSelect" onchange="generateUrls()">
@@ -112,7 +125,7 @@
             <button onclick="copyUrl()">Copier le code embed Flourish</button>
             <h3>Liste à puces</h3>
             <p>À copier-coller dans le corps de texte d'un article PIC</p>
-            <button id="puces" onclick="openInNewWindow()">Ouvrir dans une nouvelle fenêtre</button>
+            <button id="puces" onclick="openInNewWindow()">Ouvrir la liste à puces dans une nouvelle fenêtre</button>
         </div>
         <div class="right">
             <h2>Aperçu :</h2>
@@ -139,35 +152,36 @@
                 zones.reg = await regResponse.json();
                 zones.cir = await cirResponse.json();
 
-                updateZoneSelect();
+                updateZoneSelect(); // Call this function after data is loaded
             } catch (error) {
                 console.error('Erreur lors du chargement des fichiers JSON', error);
             }
         }
 
         function updateZoneSelect() {
-            const zoneType = document.getElementById('zoneType').value;
-            const zoneSelect = document.getElementById('zoneSelect');
-            zoneSelect.innerHTML = ''; // Clear existing options
+            const selectedZoneType = document.querySelector('input[name="zoneType"]:checked');
+            if (selectedZoneType) {
+                const zoneType = selectedZoneType.value;
+                const zoneSelect = document.getElementById('zoneSelect');
+                zoneSelect.innerHTML = ''; // Clear existing options
 
-            zones[zoneType].forEach(zone => {
-                const option = document.createElement('option');
-                option.value = zone.value;
-                option.textContent = zone.name;
-                zoneSelect.appendChild(option);
-            });
+                zones[zoneType].forEach(zone => {
+                    const option = document.createElement('option');
+                    option.value = zone.value;
+                    option.textContent = zone.name;
+                    zoneSelect.appendChild(option);
+                });
 
-            generateUrls(); // Generate URLs whenever zone type is updated
+                generateUrls(); // Generate URLs whenever zone type is updated
+            }
         }
 
         function generateUrls() {
-            const zoneType = document.getElementById('zoneType').value;
+            const zoneType = document.querySelector('input[name="zoneType"]:checked').value;
             const source = document.getElementById('source').value;
             const zone = document.getElementById('zoneSelect').value;
             const tour = document.getElementById('tour').value;
             const annee = 2024;
-
-
 
             let baseUrl;
 
@@ -175,7 +189,7 @@
                 baseUrl = 'https://flo.uri.sh/visualisation/18399352/embed?';
             } else {
                 baseUrl = 'https://flo.uri.sh/visualisation/18398558/embed?';
-                document.getElementById('remarque').innerText = "Remarque : les données des candidats du ministère de l'Intérieur ne sont pas encore disponibles à l'heure disponible. Il est donc normal qu'un message d'erreur s'affiche si vous choisissez cette source."
+                document.getElementById('remarque').innerText = "Remarque : les données des candidats du ministère de l'Intérieur ne sont pas encore disponibles à l'heure disponible. Il est donc normal qu'un message d'erreur s'affiche si vous choisissez cette source.";
             }
 
             const params = `tour=${tour}&source=${source}&zone=${zone}&annee=${annee}`;
@@ -195,7 +209,7 @@
         }
 
         function openInNewWindow() {
-            const zoneType = document.getElementById('zoneType').value;
+            const zoneType = document.querySelector('input[name="zoneType"]:checked').value;
             const source = document.getElementById('source').value;
             const zone = document.getElementById('zoneSelect').value;
             const tour = document.getElementById('tour').value;
