--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                 document.getElementById('remarque').innerText = "Remarque : les données des candidats du ministère de l'Intérieur ne sont pas encore disponibles à l'heure disponible. Il est donc normal qu'un message d'erreur s'affiche si vous choisissez cette source.";
             }
 
-            const params = `scrutin=legislatives&annee=${annee}&tour=${tour}&source=${source}&zone=${zone}`;
+            const params = `scrutin=legislatives&type=candidats&annee=${annee}&tour=${tour}&source=${source}&zone=${zone}`;
 
             const url = baseUrl + params;
             const urlTextArea = document.getElementById('urlTextArea');
@@ -214,7 +214,7 @@
             const zone = document.getElementById('zoneSelect').value;
             const tour = document.getElementById('tour').value;
             const annee = 2024;
-            const params = `tour=${tour}&source=${source}&zone=${zone}&annee=${annee}`;
+            const params = `scrutin=legislatives&type=candidats&annee=${annee}&tour=${tour}&source=${source}&zone=${zone}`;
             window.open(`puces.html?${params}`, '_blank');
         }
 
