--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                 baseUrl = 'https://flo.uri.sh/visualisation/18399352/embed?';
             } else {
                 baseUrl = 'https://flo.uri.sh/visualisation/18398558/embed?';
-                document.getElementById('remarque').innerText = "Remarque : les données des candidats du ministère de l'Intérieur ne sont pas encore disponibles à l'heure disponible. Il est donc normal qu'un message d'erreur s'affiche si vous choisissez cette source.";
+                //document.getElementById('remarque').innerText = "Remarque : les données des candidats du ministère de l'Intérieur ne sont pas encore disponibles à l'heure disponible. Il est donc normal qu'un message d'erreur s'affiche si vous choisissez cette source.";
             }
 
             const params = `scrutin=legislatives&type=candidats&annee=${annee}&tour=${tour}&source=${source}&zone=${zone}`;
