--- a/puces.html
+++ b/puces.html
@@ -40,7 +40,7 @@ const tour = params.get('tour');
         function generateHTML(data) {
             const contentDiv = document.getElementById('content');
             let html = ''
-            if (source === 'ministere') {
+            if (source === 'interieur') {
             html += '<p>Note : les candidats sont affichés dans l\'ordre du tirage au sort des panneaux électoraux. Les étiquettes politiques sont celles attribuées par le ministère de l\'Intérieur.</p>';
         }
             if (source === 'saisie') {
