--- a/index.html
+++ b/index.html
@@ -185,11 +185,17 @@
 
             let baseUrl;
 
-            if (source === 'saisie') {
+            if (source === 'saisie' && tour === '1') {
                 baseUrl = 'https://flo.uri.sh/visualisation/18399352/embed?';
-            } else {
+            }
+            if (source === 'saisie' && tour === '2') {
+                baseUrl = 'https://flo.uri.sh/visualisation/18465292/embed?';
+            }
+            if (source === 'interieur' && tour === '1') {
                 baseUrl = 'https://flo.uri.sh/visualisation/18398558/embed?';
-                //document.getElementById('remarque').innerText = "Remarque : les données des candidats du ministère de l'Intérieur ne sont pas encore disponibles à l'heure disponible. Il est donc normal qu'un message d'erreur s'affiche si vous choisissez cette source.";
+            }
+            if (source === 'interieur' && tour === '2') {
+                baseUrl = 'https://flo.uri.sh/visualisation/18465126/embed?';
             }
 
             const params = `scrutin=legislatives&type=candidats&annee=${annee}&tour=${tour}&source=${source}&zone=${zone}`;
